[gd_scene load_steps=3 format=3 uid="uid://dphc14ytxnku5"]

[ext_resource type="PackedScene" uid="uid://c4qr3bjwgxd7h" path="res://scenes/board/ChessBoard.tscn" id="1_pfxxr"]
[ext_resource type="Script" path="res://scripts/BoardTest.gd" id="1_tdrxb"]

[node name="BoardTest" type="Node"]
script = ExtResource("1_tdrxb")

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -246.0
offset_top = 20.0
offset_right = 246.0
offset_bottom = 54.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "MonaChess - Tablero de Ajedrez (v0.1.0)"
horizontal_alignment = 1

[node name="ChessBoard" parent="." instance=ExtResource("1_pfxxr")]
position = Vector2(340, 100)

[node name="BackButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Regresar al Men√∫"

[node name="DebugButton" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
text = "Debug Tablero"
